=^_^= seems multi-connection chat works

--- a/src/modules/webRTC/config.json
+++ b/src/modules/webRTC/config.json
@@ -1,4 +1,5 @@
 {
-    "iceServers": [{
-      "urls": "stun:stun.stunprotocol.org"}]
+    "iceServers": [
+      { "urls": "stun:stun.stunprotocol.org" }
+    ]
 }
