--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "host": "tsc && vite build && firebase deploy --only hosting:playingfield"
+    "host": "tsc && vite build && firebase deploy --only hosting:playingfield",
+    "prepare": "husky",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -26,6 +28,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "husky": "^9.1.4",
+    "prettier": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
